[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdypy-excitation"
version = "0.1.0"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "Excitation signals as used in structural dynamics and vibration fatigue."
readme = "README.rst"
keywords = ["excitation signals", "vibration fatigue", "structural dynamics"]
requires-python = ">=3.10"
dependencies = ["pyExSi"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
include = ["sdypy"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/sdypy/sdypy-excitation"
documentation = "https://sdypy-excitation.readthedocs.io/en/latest/index.html"
source = "https://github.com/sdypy/sdypy-excitation"
